import org.jetbrains.kotlin.gradle.dsl.JvmTarget
import org.jetbrains.kotlin.gradle.tasks.KotlinJvmCompile

plugins {
    id 'application'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'java'
    id 'jacoco'
    id 'org.jetbrains.kotlin.jvm' version '2.2.21'
    id 'org.jetbrains.kotlin.plugin.serialization' version '2.2.21'
    id 'org.sonarqube' version '7.0.1.6134'
    id 'org.springframework.boot' version '3.5.7'
    id 'pl.allegro.tech.build.axion-release' version '1.21.0'
}

repositories {
    flatDir { dirs 'lib' }
    mavenLocal()
    mavenCentral()
}

ext {
    kotlinVersion = '2.2.21'
    kotestVersion = '5.9.1'
    transgressoftVersion = '1.5.1'
    musicCommonsVersion = '0.1.0'
}

dependencies {
    api "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
    implementation 'org.apache.commons:commons-lang3:3.19.0'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.20.1'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.20'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.20.1'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.20.1'
    implementation 'com.google.guava:guava:33.5.0-jre'
    implementation 'com.neovisionaries:nv-i18n:1.29'
    implementation 'com.worldsworstsoftware:itunesutilities:1.2'
    implementation 'commons-io:commons-io:2.21.0'
    implementation 'de.codecentric.centerdevice:centerdevice-nsmenufx:2.1.7'
    implementation 'io.github.microutils:kotlin-logging-jvm:3.0.5'
    implementation 'jakarta.annotation:jakarta.annotation-api:3.0.0'
    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.1'
    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-javafx:1.10.1'
    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.9.0'
    implementation 'net.jthink:jaudiotagger:3.0.1'
    implementation 'net.rgielen:javafx-weaver-core:2.0.1'
    implementation 'net.rgielen:javafx-weaver-spring:2.0.1'
    implementation "net.transgressoft:music-commons-api:$musicCommonsVersion"
    implementation "net.transgressoft:music-commons-core:$musicCommonsVersion"
    implementation "net.transgressoft:music-commons-fx:$musicCommonsVersion"
    implementation "net.transgressoft:transgressoft-commons-core:$transgressoftVersion"
    implementation 'org.apache.commons:commons-lang3:3.19.0'
    implementation 'org.apache.poi:poi-ooxml:5.4.1'
    implementation 'org.controlsfx:controlsfx:11.2.2'
    implementation 'org.fxmisc.easybind:easybind:1.0.3'
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-logging'
    implementation 'org.yaml:snakeyaml:2.2'

    implementation platform("org.jetbrains.kotlin:kotlin-bom:$kotlinVersion")
    implementation "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
    api "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"

    testImplementation "net.transgressoft:music-commons-test:$musicCommonsVersion"
    testImplementation "net.transgressoft:music-commons-fx-test:$musicCommonsVersion"
    testImplementation 'org.hamcrest:hamcrest:3.0'
    testImplementation 'org.mockito:mockito-core:5.20.0'
    testImplementation 'org.testfx:testfx-junit5:4.0.18'
    testImplementation 'org.testfx:testfx-core:4.0.18'
    testImplementation 'org.testfx:openjfx-monocle:21.0.2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation(platform('org.junit:junit-bom:6.0.1'))
    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.10.1'
    testImplementation('org.junit.jupiter:junit-jupiter')
}

kotlin {
    jvmToolchain(24)
}

application {
    applicationName = 'musicott'
    mainClass = 'net.transgressoft.musicott.MusicottApplication'

    applicationDefaultJvmArgs = [
            '--enable-native-access=javafx.graphics',
            '--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED',
            '--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED',
            '--add-opens=javafx.graphics/com.sun.javafx.css=ALL-UNNAMED',
            '--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
            '--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
            '--add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED'
    ]
}

scmVersion {
    tag {
        prefix = 'v'
    }
    useHighestVersion = true
    ignoreUncommittedChanges = false
    versionIncrementer 'incrementMinor'
}

jar {
    enabled = true
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    zip64 = true

    manifest {
        attributes 'Main-Class': 'net.transgressoft.musicott.MusicottApplication'
    }

    from {
        (configurations.runtimeClasspath.findAll { !it.path.endsWith('.pom') }).collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }

    archiveFileName = "Musicott-${scmVersion.version}.jar"

    exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA'
}

group = 'net.transgressoft'
version = scmVersion.version
description = 'musicott'

configurations.configureEach {
    exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
    exclude group: 'org.springframework.boot', module: 'spring-boot-starter-web'
    resolutionStrategy.force 'org.yaml:snakeyaml:2.2'
    resolutionStrategy {
        cacheChangingModulesFor 0, 'seconds'
    }

    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
        if (details.requested.group == 'org.jetbrains.kotlinx' && details.requested.name.startsWith('kotlinx-coroutines')) {
            details.useVersion('1.10.1')
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-Xlint:unchecked' << '-Xlint:deprecation'
}

tasks.register('sourceJar', Jar) {
    dependsOn classes
    archiveClassifier.set('sources')
    from sourceSets.main.allSource
    from sourceSets.main.output
}

tasks.register('javadocJar', Jar) {
    dependsOn javadoc
    archiveClassifier.set('javadoc')
    from javadoc.destinationDir
    javadoc.options.addStringOption('Xdoclint:none', '-quiet')
}

tasks.withType(KotlinJvmCompile).configureEach {
    compilerOptions {
        jvmTarget.set(JvmTarget.JVM_24)
        freeCompilerArgs.add('-Xjsr305=strict')
        freeCompilerArgs.add('-Xjvm-default=all')
    }
}

sonar {
    properties {
        property 'sonar.host.url', 'http://sonar.transgressoft.net'
        property 'sonar.projectKey', 'net.transgressoft:musicott'
        property 'sonar.projectName', 'musicott'
        property 'sonar.projectVersion', version
        property 'sonar.sources', 'src/main'
        property 'sonar.exclusions', 'src/test/**'
    }
}

tasks.named('check') {
    dependsOn tasks.named('jacocoTestReport', JacocoReport)
}

test {
    useJUnitPlatform()

    // Allow overriding headless mode
    if (System.getProperty('testfx.headless') == 'false') {
        systemProperty 'testfx.robot', 'awt'
        systemProperty 'java.awt.headless', 'false'
    } else {
        systemProperty 'testfx.headless', 'true'
        systemProperty 'java.awt.headless', 'true'
        systemProperty 'testfx.robot', 'glass'
        systemProperty 'prism.order', 'sw'
        systemProperty 'prism.text', 't2k'
        systemProperty 'glass.platform', 'Gtk'
        systemProperty 'monocle.platform', 'Headless'
    }

    testLogging {
        events "passed", "skipped", "failed"
    }

    jvmArgs = [
            '--enable-native-access=javafx.graphics',
            '--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
            '--add-exports=javafx.graphics/com.sun.glass.utils=ALL-UNNAMED',
            '--add-exports=javafx.graphics/com.sun.glass.ui.monocle=ALL-UNNAMED',
            '--add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
            '--add-exports=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED',
            '--add-exports=javafx.base/com.sun.javafx.reflect=ALL-UNNAMED',
            '--add-exports=javafx.base/com.sun.javafx.beans=ALL-UNNAMED',
            '--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED',
            '--add-exports=javafx.base/com.sun.javafx.logging=ALL-UNNAMED',
            '--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
            '--add-opens=javafx.graphics/com.sun.glass.ui.monocle=ALL-UNNAMED',
            '--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
            '--add-opens=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED',
            '--add-opens=javafx.graphics/javafx.scene.image=ALL-UNNAMED',
            '--add-opens=javafx.base/com.sun.javafx.reflect=ALL-UNNAMED',
            '--add-opens=javafx.base/com.sun.javafx.beans=ALL-UNNAMED',
            '--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED',
            '--add-opens=javafx.base/com.sun.javafx.logging=ALL-UNNAMED',
            '--add-opens=javafx.base/javafx.beans=ALL-UNNAMED',
            '--add-opens=javafx.base/javafx.beans.property=ALL-UNNAMED',
            '--add-opens=javafx.base/javafx.collections=ALL-UNNAMED',
    ]
}

jacocoTestReport {
    reports {
        xml.required.set true
        html.required = true
    }
}
